adding other stylesheets
not sure why CSS is not being recognized in gh-pages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="shortcut icon" href="https://www.wikipedia.org/static/favicon/wikipedia.ico">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/styles.production.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.scss">
   </head>
 <body>
   <header class="page-header">
